Fix code smells
Fixed code smells pointed out by Sonar.